--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Social network for developers",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
@@ -14,19 +13,17 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
-    "client": "file:client",
-    "config": "^3.3.3",
-    "express": "^4.17.1",
-    "express-validator": "^6.8.1",
-    "gravatar": "^1.8.1",
+    "config": "^3.1.0",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.1",
+    "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.8",
-    "normalize-url": "^5.3.0"
+    "mongoose": "^5.7.5",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "nodemon": "^2.0.6"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.11"
   }
 }
