--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
-    "config": "^3.1.0",
-    "express": "^4.16.4",
-    "express-validator": "^5.3.1",
-    "gravatar": "^1.8.0",
+    "client": "file:client",
+    "config": "^3.3.3",
+    "express": "^4.17.1",
+    "express-validator": "^6.8.1",
+    "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.5",
-    "request": "^2.88.0"
+    "mongoose": "^5.11.8",
+    "normalize-url": "^5.3.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.11"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6"
   }
 }
