--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "devconnector",
   "version": "1.0.0",
   "description": "Social network for developers",
-  "main": "server.mjs",
+  "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "node server.mjs",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
