--- a/deploy.yaml
+++ b/deploy.yaml
@@ -31,7 +31,9 @@ spec:
   selector:
     app: reactjs
   ports:
-    - port: 3000
+    - name: http
+      port: 3000
       targetPort: 3000
-    - port: 5000
+    - name: api
+      port: 5000
       targetPort: 5000
